--- a/基础类型/valueOf_toString.html
+++ b/基础类型/valueOf_toString.html
@@ -14,7 +14,12 @@
 			}
 		}
 		
-//		alert(new Date(obj))
-		alert(new Date('2018/02-03&02'))
+		// alert(new Date(obj))
+		// alert(obj)
+		// alert(new Date('2018/02-03&02'))
+		var a = 1;
+		var b = function () { console.log(1) }
+		console.log(a.toString())
+		console.log(obj.toString())
 	</script>
 </html>
