--- a/基础类型/wile.html
+++ b/基础类型/wile.html
@@ -6,11 +6,17 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-			var arr = [0,1,2]
-			var len 
-			while(len = arr.length){
-				console.log(arr[arr.length-1])
-				arr.pop()
+			// var arr = [0,1,2]
+			// var len 
+			// while(len = arr.length){
+			// 	console.log(arr[arr.length-1])
+			// 	arr.pop()
+			// }
+
+			var array = [3,8,9]
+			for (var index = array.length; index; index--) {
+				// debugger
+				console.log(index)
 			}
 		</script>
 	</body>
