--- a/算法/斐波那契数列.html
+++ b/算法/斐波那契数列.html
@@ -7,6 +7,36 @@
 	<body>
 	</body>
 	<script type="text/javascript">
-		
+		const fibArr = [1,1,2,3,5,8]
+
+		// function fib (n) {
+		// 	if (n < 0) {
+		// 		throw new Error('n不能小于0')
+		// 	}
+
+		// 	if (n === 0 || n === 1) {
+		// 		return 1
+		// 	}
+		// 	var result = fib(n - 1) + fib(n - 2)
+		// 	return result
+		// }
+
+		n = 3 r = 1+1 2
+		n = 4 r = 1+2 3
+		n = 5 r = 2+3 
+		function fib (n) {
+			if (n === 0 || n === 1) {
+				return 1
+			}
+			
+			let prere = 1;
+			let pre  = 1
+			
+			for (let index = 3; index < n + 1; index++) {
+				
+			}
+		}
+
+		console.log(fib(5))
 	</script>
 </html>
