--- a/es6/generator.html
+++ b/es6/generator.html
@@ -6,23 +6,36 @@
 	</head>
 	<body>
 <script type="text/javascript">
-	function* test(){
-	 yield 'hello'
-	 yield 'word'
-	 return 'end'
-	}
-	
-	const a = test()
-	console.log(a.next())
-	console.log(a.next())
-	console.log(a.next())
-	console.log(a.next())
-	
-	//异步
+/*
+基本使用
+*/
 	// function* test(){
-	//     console.log(123)
+	//  yield 'hello'
+	//  yield 'word'
+	//  return 'end'
 	// }
 	
+	// const a = test()
+	// console.log(a.next())
+	// console.log(a.next())
+	// console.log(a.next())
+	// console.log(a.next())
+	
+/*
+数据交换
+1. yield 输出值，外部通过next()接受
+2. var param = yield ，内部通过这种接受外部next(param)的参数
+*/
+	function* gen () {
+		debugger
+		var y = yield 1 // y接受第二次调用的next的参数
+		debugger
+		yield y
+		debugger
+	} 
+	var g = gen()
+	console.log(g.next())
+	console.log(g.next(2)) // 2
 </script>	
 	</body>
 </html>
