--- a/算法/递归.html
+++ b/算法/递归.html
@@ -36,7 +36,7 @@
         // }
         // c()
         
-        var array = [1,2,3,4]
+        // var array = [1,2,3,4]
 
         // function reverse (sum, i) {
         //     if (i < array.length) {
@@ -117,11 +117,10 @@
                 }
             }
         }
-        console.log(testTime) // 测试代码
         return rever(cites, [])
     }
     console.log(findCityParents(citesData, 211))
-    
+    console.log(testTime) // 测试代码
     </script>
 </body>
 </html>
