--- a/算法/二叉树/test.html
+++ b/算法/二叉树/test.html
@@ -121,6 +121,42 @@ class NodeTree {
         yield* this.__transverse(node.right);
     }
 
+    // 层序遍历
+    // leverTransverse(cb) {
+    //     let queue = [], node = null;
+    //     this.root && queue.push(this.root)
+
+    //     while (queue.length) {
+    //         node = queue.shift()
+    //         cb(node)
+    //         node.left && queue.push(node.left)
+    //         node.right && queue.push(node.right)
+    //     }
+    // }
+    
+    // 递归
+    returnLeverTransverse() {
+        let result = []
+
+        function _leverTransverse(queue) {
+            let currentlevelNodes = [], nextLevelNodes = [];
+
+            for (let index = 0; index < queue.length; index++) {
+                let node = queue[index]
+                currentlevelNodes.push(node.val)
+                node.left && nextLevelNodes.push(node.left)
+                node.right && nextLevelNodes.push(node.right)
+            }
+
+            result.push(currentlevelNodes)
+            
+            nextLevelNodes.length && _leverTransverse(nextLevelNodes)
+        }
+
+       this.root && _leverTransverse([this.root], 0)
+       return result
+    }
+
     // 递归
     // _search (node, value) {
     //     if (value < node.value) {
@@ -174,22 +210,15 @@ nodeTree1.insert(8)
 // })
 // console.log(nodeTree1.transverse().next())
 
-for (const it of nodeTree1) {
-    console.log(it)
-}
-
+// for (const it of nodeTree1) {
+//     console.log(it)
+// }
 
 // console.log(nodeTree1.search(6))
 
-
-// 递归实现for循环
-// var array = [1,3,4,6]
-// function _find (index) {
-//     if (index < array.length - 1) {
-//         _find(++index)
-//     }
-// }
-// _find(0)
+nodeTree1.leverTransverse((node)=>{
+    console.log(node.value)
+})
 
 </script>
 </body>
