--- a/算法/二叉树/test.html
+++ b/算法/二叉树/test.html
@@ -134,8 +134,8 @@ class NodeTree {
     //     }
     // }
     
-    // 递归
-    returnLeverTransverse() {
+    // 层序遍历-递归
+    leverTransverse() {
         let result = []
 
         function _leverTransverse(queue) {
